fix(styles): do not shrink the app if the height is too small

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 #root {
-  height: 100%;
+  min-height: 100%;
 
   @apply bg-secondary;
 }
